--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,14 @@ h3 {
 
 h1 {
   font-family: Serif;
-  font-size: 96px;
+  font-size: 90px;
   font-weight: 500;
 }
 
 h2 {
-  font-size: 48px;
-  font-weight: 600;
+  font-family: Serif;
+  font-size: 44px;
+  font-weight: 500;
 }
 
 h3 {
@@ -37,13 +38,6 @@ h3 {
   display: flex;
   justify-content: space-between;
   padding: 7px 30px;
-}
-
-.projects {
-  display: block;
-  background: var(--additional-color);
-  padding: 0px 116px;
-  margin: auto;
 }
 
 .links {
@@ -72,6 +66,17 @@ h3 {
   border: 1px solid var(--main-color);
 }
 
+.projects {
+  display: block;
+  background: var(--additional-color);
+  padding: 0px 48px;
+  margin: auto;
+}
+
+.project-info {
+  text-align: justify;
+}
+
 .project-link {
   color: var(--additional-color);
   background: var(--main-color);
@@ -89,11 +94,18 @@ h3 {
   padding: 35px 20px;
 }
 
+.images {
+  display: block;
+  background: var(--additional-color);
+  padding: 0px 24px;
+  margin: auto;
+}
+
 .mail-link {
   display: block;
   color: var(--main-color);
   text-align: center;
-  font-size: 28px;
+  font-size: 24px;
   text-decoration: none;
   margin: 10px auto;
 }
